# bobsled

./: README.md
cloudfunction-terraform-demo/gcf-get-upload-url/: .cookiecutter.json  .gitignore  package-lock.json  package.json
cloudfunction-terraform-demo/gcf-process-uploaded-file/: .cookiecutter.json  .gitignore  package-lock.json  package.json
iap-cloudrun-terraform-demo/: apply.sh  destroy.sh  main.tf  provider.tf  variables.tf  versions.tf
iap-k8s-demo/: README.md  add-demo.py  iap-config.yaml  ingress.yaml  kustomization.yaml  pyproject.toml  tls-certificates.yaml
iap-k8s-demo/playlist-recommendation-demo/: deployment.yaml  horizontal-autoscaler.yaml  service.yaml
iap-k8s-demo/questionable-demo/: deployment.yaml  horizontal-autoscaler.yaml  service.yaml
iap-k8s-demo/semantic-demo/: deployment.yaml  horizontal-autoscaler.yaml  service.yaml
iap-k8s-demo/sensitive-topic-tagger/: deployment.yaml  horizontal-autoscaler.yaml  kustomization.yaml  service.yaml
iap-k8s-demo/showcase-api-demo/: deployment.yaml  horizontal-autoscaler.yaml  service.yaml
iap-k8s-demo/showcase-demo-for-researchers/: deployment.yaml  horizontal-autoscaler.yaml  service.yaml
iap-k8s-demo/videotypes/: deployment.yaml  horizontal-autoscaler.yaml  service.yaml
iap-k8s-demo/yt/: deployment.yaml  horizontal-autoscaler.yaml  kustomization.yaml  service.yaml
online-retail/: README.md  build.sbt  online_retail_II_report.xlsx
sensor-fusion/: build.sbt
toptal-assignment/: .gitignore  Explore.ipynb  Makefile  Pipfile  README.md  requirements-dev.txt  requirements.txt  setup.py
(+35 files in other folders)
